--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="app">
 <head>
-    <meta charset="UTF-8">
-    <title>Angular is awesome</title>
+  <meta charset="UTF-8">
+  <title>Angular is awesome</title>
+  <style>
+    ul li {
+      text-transform: capitalize;
+    }
+  </style>
 </head>
-<body ng-controller="PhoneListController as $ctrl">
-<ul>
+<body>
+<div ng-controller="PhoneListController as $ctrl">
+  <ul>
     <li ng-repeat="phone in $ctrl.phonesList">{{phone}}</li>
-</ul>
-<form ng-submit="$ctrl.add($ctrl.newPhone)">
-    <input ng-model="$ctrl.newPhone"><button type="submit">Добавить</button>
+  </ul>
+</div>
+<form ng-submit="$ctrl.add($ctrl.newPhone)" ng-controller="PhoneFormController as $ctrl">
+  <input ng-model="$ctrl.newPhone">
+  <button type="submit">Добавить</button>
 </form>
 <script src="node_modules/angular/angular.js"></script>
 <script src="src/app.js"></script>
